crates/python_parser/tests/snapshots/invalid_syntax@expressions__compare__multiple_equals.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/compare/multiple_equals.py
---
## AST

```
Module(
    ModModule {
        range: 0..41,
        body: [
            Assign(
                AssignStmt {
                    range: 25..32,
                    targets: [
                        Compare(
                            CompareExpr {
                                range: 25..29,
                                left: Name(
                                    NameExpr {
                                        range: 25..26,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                ops: [
                                    Eq,
                                ],
                                comparators: [
                                    Name(
                                        NameExpr {
                                            range: 29..29,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    value: Name(
                        NameExpr {
                            range: 31..32,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Assign(
                AssignStmt {
                    range: 33..40,
                    targets: [
                        Compare(
                            CompareExpr {
                                range: 33..37,
                                left: Name(
                                    NameExpr {
                                        range: 33..34,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                ops: [
                                    NotEq,
                                ],
                                comparators: [
                                    Name(
                                        NameExpr {
                                            range: 37..37,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    value: Name(
                        NameExpr {
                            range: 39..40,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # This is not JavaScript
2 | x === y
  |     ^ Syntax Error: Expected an expression
3 | x !== y
  |


  |
1 | # This is not JavaScript
2 | x === y
  | ^^^^ Syntax Error: Invalid assignment target
3 | x !== y
  |


  |
1 | # This is not JavaScript
2 | x === y
3 | x !== y
  |     ^ Syntax Error: Expected an expression
  |


  |
1 | # This is not JavaScript
2 | x === y
3 | x !== y
  | ^^^^ Syntax Error: Invalid assignment target
  |
